syntax = "proto3";

package search;

import "google/protobuf/empty.proto";

option java_package = "mobile.train.grpc";
option java_multiple_files = true;

message PingResponse {
  string message = 1;
}


// Service
service TrainService {
  rpc Ping(google.protobuf.Empty) returns (PingResponse) {}
}